--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"		
+		"test": "jest"
 	},
 	"dependencies": {
+		"firebase": "^4.3.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.0"
 	},
